@startuml restapi_er_diagram

title Baza danych REST API - diagram związków encji

entity "users" as users {
  *id : UUID
  --
  email : VARCHAR(255)
  google_id : VARCHAR(255)
  name : VARCHAR(255)
  access_token : TEXT
  refresh_token : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "chats" as chats {
  *id : UUID
  --
  user_id : UUID
  chat_id : VARCHAR(255)
  chat_name : VARCHAR(255)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "messages" as messages {
  *id : UUID
  --
  chat_id : UUID
  role : ENUM
  content : TEXT
  created_at : TIMESTAMP
}

entity "listings" as listings {
  *id : UUID
  --
  chat_id : VARCHAR(255)
  image : VARCHAR(500)
  title : VARCHAR(500)
  description : TEXT
  link : VARCHAR(1000)
  price_value : DECIMAL(10,2)
  price_label : VARCHAR(100)
  price_currency : VARCHAR(10)
  price_negotiable : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "user_favorite_listings" as favorites {
  *user_id : UUID
  *listing_id : UUID
  --
  created_at : TIMESTAMP
}

users ||--o{ chats : "posiada (1:N)"
chats ||--o{ messages : "zawiera (1:N)"
chats ||--o{ listings : "ma (1:N)\npo chat_id"
users }o--o{ listings : "ulubione (N:M)"
favorites }o--|| users
favorites }o--|| listings

note right of users
  **Konta użytkowników**
  - Uwierzytelnianie przez Google OAuth
  - Przechowywanie tokenów dostępu do API
  - Jeden użytkownik może mieć wiele czatów
  - Może oznaczać wiele ofert jako ulubione
end note

note right of chats
  **Sesje czatu**
  - Każdy czat to sesja wyszukiwania prezentu
  - chat_id jest identyfikatorem biznesowym
  - id to techniczne UUID w bazie
  - Usunięcie użytkownika usuwa jego czaty (CASCADE DELETE)
end note

note bottom of messages
  **Wiadomości czatu**
  - role: user | assistant | system
  - Usuwane razem z czatem (CASCADE DELETE)
  - Porządkowane według created_at
end note

note bottom of listings
  **Rekomendacje produktów**
  - Z wielu platform e-commerce
  - Odwołanie do chats.chat_id (nie id!)
  - Przy usunięciu czatu ustawiany NULL (SET NULL)
  - Mogą być dodawane do ulubionych przez użytkowników
end note

note left of favorites
  **Tabela łącząca**
  - Relacja wiele-do-wielu
  - Złożony klucz główny (user_id, listing_id)
  - Usunięcie użytkownika lub oferty usuwa wpis (CASCADE DELETE)
  - Przechowuje datę dodania do ulubionych
end note

@enduml
